# arm_ws

./: .gitignore  README.md
home/arm_ws/src/: .setup_assistant  CMakeLists.txt  package.xml
home/arm_ws/src/config/: joint_limits.yaml  moveit_controllers.yaml  robotic_arm_6dof.ros2_control.xacro  robotic_arm_6dof.srdf
home/arm_ws/src/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_2026/: CMakeLists.txt  package.xml  plugin.xml
src/arm_2026/arm_2026/: keyboard_teleop.cpp
src/arm_2026/config/: controllers.yaml
src/arm_2026/description/: arm_2026.urdf.xacro
src/arm_2026/include/arm_2026/: arm_2026_system.hpp
src/arm_2026/launch/: bringup.launch.py
src/arm_2026/src/: arm_2026_system.cpp
src/arm_teleop/: package.xml  setup.py
src/arm_teleop/arm_teleop/: ps5_arm_teleop.py
src/mini_arm_ros2/: CMakeLists.txt  package.xml  plugin.xml
src/mini_arm_ros2/config/: controllers.yaml
src/mini_arm_ros2/include/mini_arm_ros2/: arm_pca9685_system.hpp  mini_arm_hardware.hpp
src/mini_arm_ros2/launch/: bringup.launch.py
src/mini_arm_ros2/scripts/: cartesian_ik_teleop.py  fk_tf_broadcaster.py  ikpy_ik_node.py
src/mini_arm_ros2/src/: arm_pca9685_system.cpp  mini_arm_hardware.cpp
src/mini_arm_ros2/urdf/: mini_arm.urdf
src/mini_arm_teleop/: package.xml  setup.cfg  setup.py
src/mini_arm_teleop/mini_arm_teleop/: keyboard_cartesian_ik_teleop.py  keyboard_teleop.py  ps5_arm_teleop.py  ps5_cartesian_ik_teleop.py
src/robotic_arm_6dof/urdf/: robotic_arm_6dof.urdf
src/robotic_arm_6dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robotic_arm_6dof_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  robotic_arm_6dof.srdf  robotic_arm_6dof.urdf.xacro  ros2_controllers.yaml
src/robotic_arm_6dof_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
